examples/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: elasticsearch
  labels:
    service: elasticsearch
spec:
  serviceName: elasticsearch
  # Number of PODS
  replicas: 3
  selector:
    matchLabels:
      service: elasticsearch
  template:
    metadata:
      labels:
        service: elasticsearch
    spec:
      terminationGracePeriodSeconds: 15
      containers:
      - name: elasticsearch
        image: docker.elastic.co/elasticsearch/elasticsearch:6.4.1
        resources:
          limits:
            cpu: 2000m
            memory: 4Gi
          requests:
            cpu: 100m
            memory: 2Gi
        ports:
        - containerPort: 9200
          name: http
        - containerPort: 9300
          name: tcp
        volumeMounts:
        - name: elasticsearch
          mountPath: /usr/share/elasticsearch/data
        - name: elasticsearch-configmap
          mountPath: /usr/share/elasticsearch/config/elasticsearch.yml
          subPath: elasticsearch.yml
        - name: elasticsearch-configmap
          mountPath: /usr/share/elasticsearch/config/role_mapping.yml
          subPath: role_mapping.yml
      volumes:
        - name: elasticsearch-configmap
          configMap:
            name: elasticsearch-configmap

  volumeClaimTemplates:
  - metadata:
      name: elasticsearch
    spec:
      storageClassName: managed-premium-retain
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 200Gi
